--- a/updateHelmChart.yml
+++ b/updateHelmChart.yml
@@ -90,7 +90,7 @@ jobs:
         git config credential.helper store
 
         $cred = "https://$(git_user):$(git_token)@github.com"
-        Set-Content -Path "$env:USERPROFILE\.git-credentials" -Value $cred -Encoding ASCII
+        Set-Content -Path "$env:HOME\.git-credentials" -Value $cred -Encoding ASCII
 
         Write-Host "WARNING: Force-pushing branch $branchName to origin. This will overwrite any existing branch with the same name."
         git push origin $branchName --force     
