--- a/codesign-nuget-package-using-trusted-signing.yml
+++ b/codesign-nuget-package-using-trusted-signing.yml
@@ -46,16 +46,41 @@ steps:
         Write-Host "Authenticated via service connection"
       addSpnToEnvironment: true
 
-  - task: TrustedSigning@0
-    displayName: 'Sign NuGet packages with Trusted Signing'
-    inputs:
-      Endpoint: ${{ parameters.trustedSigningAccountEndpoint }}
-      TrustedSigningAccountName: ${{ parameters.trustedSigningAccountName }}
-      CertificateProfileName: ${{ parameters.certificateProfileName }}
-      Files: ${{ parameters.packagePaths }}
-      FileDigest: SHA256
-      TimestampRfc3161: 'http://timestamp.acs.microsoft.com'
-      TimestampDigest: SHA256
+  - powershell: |
+      # Install dotnet sign tool
+      Write-Host "Installing dotnet sign tool..."
+      dotnet tool install --global sign --prerelease
+      
+      # Get list of packages to sign
+      $packages = Get-ChildItem -Path "${{ parameters.packagePaths }}" -File
+      
+      if ($packages.Count -eq 0) {
+        Write-Error "No NuGet packages found at path: ${{ parameters.packagePaths }}"
+        exit 1
+      }
+      
+      Write-Host "Found $($packages.Count) package(s) to sign:"
+      $packages | ForEach-Object { Write-Host "  $($_.FullName)" }
+      
+      # Sign each package
+      foreach ($package in $packages) {
+        Write-Host "`nSigning package: $($package.Name)"
+        
+        sign code trusted-signing "$($package.FullName)" `
+          --trusted-signing-account "${{ parameters.trustedSigningAccountName }}" `
+          --trusted-signing-certificate-profile "${{ parameters.certificateProfileName }}" `
+          --trusted-signing-endpoint "${{ parameters.trustedSigningAccountEndpoint }}"
+        
+        if ($LASTEXITCODE -ne 0) {
+          Write-Error "Failed to sign package: $($package.Name)"
+          exit 1
+        }
+        
+        Write-Host "Successfully signed: $($package.Name)"
+      }
+      
+      Write-Host "`nAll packages signed successfully!"
+    displayName: 'Sign NuGet packages using dotnet sign tool'
 
 - ${{ else }}:
   - powershell: |
