--- a/codesign-nuget-package-using-trusted-signing.yml
+++ b/codesign-nuget-package-using-trusted-signing.yml
@@ -69,7 +69,7 @@ steps:
               '--trusted-signing-account', "${{ parameters.trustedSigningAccountName }}",
               '--trusted-signing-certificate-profile', "${{ parameters.certificateProfileName }}",
               '--trusted-signing-endpoint', "${{ parameters.trustedSigningAccountEndpoint }}",
-              '--azure-credential', 'AzureCLI'
+              '--azure-credential-type', 'azure-cli'
             )
             
             & sign @signArgs
