be specific about the sign version so it doesn't accidentally break

--- a/codesign-nuget-package-using-trusted-signing.yml
+++ b/codesign-nuget-package-using-trusted-signing.yml
@@ -44,7 +44,7 @@ steps:
       inlineScript: |
         # Install dotnet sign tool
         Write-Host "Installing dotnet sign tool..."
-        dotnet tool install --global sign --prerelease
+        dotnet tool install --global sign --version 0.9.1-beta.25379.1
         
         if ($LASTEXITCODE -ne 0) {
           Write-Error "Failed to install dotnet sign tool"
